fixed h2 too low in .table due to div.content not filling up enough height

--- a/live/style.css
+++ b/live/style.css
@@ -348,7 +348,7 @@ main {
 
 .visualizations .content.scrollable {
     overflow-y: auto;
-    max-height: var(--viz-height);
+    max-height: calc(var(--viz-height) + 50px);
 }
 
 /* Scrollbars */
